# handDetectorModule

./: LICENSE  MANIFEST.in  handDetectorModule.py  setup.cfg  setup.py
handDetectorModule.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
