[metadata]
name = hand_detector_module
version = 0.1
author = Mohamed ben chikha 
author_email = mbenchikha5@gmail.com
description = handmodule can detect and draw the shape of both hands
long_description = file: README.md
long_description_content_type = text/markdawn
url = https://github.com/fawzii0x3/handDetectorModule
classifiers = 
    Programming Language :: python :: 3
    Operating System :: Os Independent
[options]
packages = find:
python_requires = >=3.7
include_package_data = false